  (Pierre Chambart, report by Gary Huber)
* PR#4539: change exception string raised when comparing functional values
  (Nicolas Braud-Santoni, report by Eric Cooper)
- PR#4832: Filling bigarrays may block out runtime
  (Markus Mottl)
- PR#5663: program rejected due to nongeneralizable type variable that
    appears nowhere
  (Jacques Garrigue, report by Stephen Weeks)
- PR#5887: move the byterun/*.h headers to byterun/caml/*.h to avoid header
    name clashes
  (Jérôme Vouillon and Adrien Nader and Peter Zotov)
* PR#6081: ocaml should add script's directory to search path, not current
    directory
  (Thomas Leonard and Damien Doligez)
- PR#6171: Error message confusing when a type escapes its scope.
- PR#6340: Incorrect handling of \r when processing "Windows" source files
  (Damien Doligez, report by David Allsopp)
* PR#6521: {Bytes,Char,String}.escaped are locale-dependent
  (Damien Doligez, report by Jun Furuse)
- PR#6526: ocamllex warning: unescaped newline in comment string
  (Damien Doligez, report by user 'dhekir')
- PR#6341: ocamldoc -colorize-code adds spurious <br> tags to <pre> blocks
- PR#6560: Wrong failure message for {Int32,Int64,NativeInt}.of_string
  (Maxime Dénès and Gabriel Scherer)
- PR#6648: show_module should indicate its elision
- PR#6650: Cty_constr not handled correctly by Subst
- PR#6651: Failing component lookup
* PR#6664: Crash when finalising lazy values of the wrong type.
  (Damien Doligez)
- PR#6672: Unused variance specification allowed in with constraint
- PR#6744: Univars can escape through polymorphic variants (partial fix)
- PR#6776: Failure to kill the "tick" thread, segfault when exiting the runtime
- PR#6752: Extensible variant types and scope escaping
- PR#6808: the parsing of OCAMLRUNPARAM is too lax
  (Damien Doligez)
* PR#6816: reject identifiers following numeric literals without spacing, e.g.
    let foo = 1 in (fun a b -> a,b) 23foo
  (Hugo Heuzard)
- PR#6874: Inefficient code generated for module function arguments