@@ -10,16 +10,16 @@ type ('a, 'result, 'visit_action) context =
     function
     | Local -> fun _ -> raise Exit
     | Global -> fun _ -> raise Exit
-Error: This expression has type (ex#0, ex#0 * insert, 'a) context -> 'b -> 'a
+Error: This expression has type ($0, $0 * insert, 'a) context -> 'b -> 'a
        but an expression was expected of type 'c
-       The type constructor ex#0 would escape its scope
+       The type constructor $0 would escape its scope
 #           Characters 11-170:
   ..........(type visit_action) : ('a, 'result, visit_action) context -> 'a -> visit_action =
     function
     | Local -> fun _ -> raise Exit
     | Global -> fun _ -> raise Exit
-Error: This expression has type (a#0, a#0 * insert, 'a) context -> a#0 -> 'a
+Error: This expression has type ($'a, $'a * insert, 'a) context -> $'a -> 'a
        but an expression was expected of type 'b
-       The type constructor a#0 would escape its scope
+       The type constructor $'a would escape its scope
 #           val vexpr : (unit, 'a, 'b) context -> unit -> 'b = <fun>
 # 
